# congress2corpus

./: LICENSE  README.md  pyproject.toml
src/congress2corpus/: congress2corpus.py
